Added some HTML lines.

--- a/views/index.html
+++ b/views/index.html
@@ -35,10 +35,8 @@
         </form>
       </section>
       <h2>Example Usage:</h2>
-      <a
-        href="https://url-shortener-microservice.freecodecamp.rocks/api/shorturl/3"
-      >
-        [this_project_url]/api/shorturl/-UjQKwTua
+      <a href="https://url-shortener-21.herokuapp.com/api/shorturl/-UjQKwTua">
+        https://url-shortener-21.herokuapp.com/api/shorturl/-UjQKwTua
       </a>
       <h3>Will Redirect to:</h3>
       <p>https://www.playstation.com</p>
