--- a/views/index.html
+++ b/views/index.html
@@ -35,8 +35,8 @@
         </form>
       </section>
       <h2>Example Usage:</h2>
-      <a href="https://url-shortener-21.herokuapp.com/api/shorturl/-UjQKwTua">
-        https://url-shortener-21.herokuapp.com/api/shorturl/-UjQKwTua
+      <a href="https://url-shortener-nine-iota.vercel.app/api/shorturl/-UjQKwTua">
+        https://url-shortener-nine-iota.vercel.app/api/shorturl/-UjQKwTua
       </a>
       <h3>Will Redirect to:</h3>
       <p>https://www.playstation.com</p>
